# crawlstats

./: crawlstats.cabal  stack.yaml
app/: Main.hs  PlayerSer.hs
data/: armour.csv  monsters.csv  shields.csv  weapons.csv
src/Crawl/Stats/: Armour.hs  Attack.hs  Data.hs  Dice.hs  Monster.hs  Named.hs  Player.hs  Shield.hs  Stats.hs  Weapon.hs
src/Crawl/Stats/Lens/: Player.hs
