name:                crawlstats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/crawlstats#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crawl.Stats.Dice, Crawl.Stats.Player, Crawl.Stats.Weapon, Crawl.Stats.Data, Crawl.Stats.Named, Crawl.Stats.Armour, Crawl.Stats.Stats
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , probability
                     , boxes
                     , cassava
                     , bytestring
                     , vector
                     , mtl
                     , monadplus
                     , bytestring
  default-language:    Haskell2010

executable crawlstats
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crawlstats
                     , probability
                     , boxes
  default-language:    Haskell2010

test-suite crawlstats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crawlstats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crawlstats
